versioned_docs/version-1.1.0/fundamentals/layout/breakpoints.mdx
---
title: Breakpoints
sidebar_position: 3
---

# Breakpoints

Controls layout adjustments at specific screen widths for responsive web design.

### Responsive Breakpoints

Responsive breakpoints allow you to create flexible and adaptable layouts for your web projects. These breakpoints provide fine-grained control over your layout's behavior on different devices.

:::caution Utilizing Breakpoints
To make use of the following classes effectively, you should include a `row` class in the main container `<div>`. This ensures proper alignment and spacing of your columns. Here's an example of how to structure your layout:

```html
<div class="gap-1 row">
    <div class="xs:col-12 lg:col-3 md:col-6">
        <!-- ... -->
    </div>
    <!-- ... -->
</div>
```
:::

#### Available Breakpoints

- `xs:col-{value}`: Extra Small Screens
- `sm:col-{value}`: Small Screens
- `md:col-{value}`: Medium Screens
- `lg:col-{value}`: Large Screens
- `xl:col-{value}`: Extra Large Screens

#### Customizable Breakpoints

Breakpoints are defined as Sass variables, making them easy to customize to suit your project's needs. Here's how the breakpoints are defined:

```scss
$breakpoints: (
    "xs": 0,
    "sm": 480px,
    "md": 720px,
    "lg": 960px,
    "xl": 1200px
);
```